@@ -1,6 +1,7 @@
 # vim: set noexpandtab:
 2012-09-19 Matt
 	* Fixed DilTrigLogic to not check trigger for MC, just checks the region.
+	* Changed constructor DilTrigLogic to not require isMC bool, always initialize the reweight tool now
 	
 2012-09-19 Steve
 	* Added ptcone30ElStyle to Muon class
